
2006-03-07  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.c: propagate key-press event to the
	  parent class (Closes N#23400)
	* configure.ac: 0.12.3

2006-03-06  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-wizard-dialog.[ch]: Add page_change signal. Patch courtesy
	  of Artem Garmash 
	* configure.ac: 0.12.2


2006-03-03  Luc Pionchon  <luc.pionchon@nokia.com>

	Cleanup font selection dialog
	
	* hildon-widgets/hildon-font-selection-dialog.c

	(hildon_font_selection_dialog_construct_notebook): removed dummy
	label

	(color_modified_cb): renamed argument 'data' to 'fsd_priv'

	(hildon_font_selection_dialog_preview_key_press): Renamed argument
	'data' to 'unused'. Replaced g_return_val_if_fail with g_assert.

	(toggle_clicked): renamed argument 'data' to 'unused'

	(hildon_font_selection_dialog_set_preview_text): added proper
	argument checking


2006-03-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-system-sound.c (hildon_play_system_sound):
	removed console messages.

	
2006-03-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-sort-dialog.c: removed unused #include
	(struct _HildonSortDialogPrivate):
	- removed okButton, cancelButton
	- removed sort_by_value, sort_order_type
	- removed index_first
	- renamed combo1   to combo_key
	- renamed caption1 to caption_key
	- renamed combo2   to combo_order
	- renamed caption2 to cpation_order

	(hildon_sort_dialog_init): removed init of unused fields.
	                           use new field names.
	(hildon_sort_dialog_get_sort_key): likewise.
	(hildon_sort_dialog_get_sort_order): likewise.
	(hildon_sort_dialog_set_sort_key): likewise.
	(hildon_sort_dialog_set_sort_order): likewise.
	(hildon_sort_dialog_add_sort_key): likewise.
	
2006-03-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-date-editor.c
	(hildon_child_forall): use g_assert instead of g_return_if_fail
	(hildon_date_editor_entry_validate): likewise.

