@@ -466,12 +466,15 @@ void hildon_get_password_dialog_set_domain(HildonGetPasswordDialog *dialog,
   
 }
 
+#ifndef HILDON_DISABLE_DEPRECATED
 /**
  * hildon_get_password_dialog_set_title:
  * @dialog: the dialog
  * @new_title: the text to be set as the dialog title.
  * 
  * sets the dialog title
+ *
+ * DEPRECATED! use gtk_window_set_title instead.
  */
 void hildon_get_password_dialog_set_title(HildonGetPasswordDialog *dialog,
 					  const gchar *new_title)
@@ -483,6 +486,7 @@ void hildon_get_password_dialog_set_title(HildonGetPasswordDialog *dialog,
   gtk_window_set_title(GTK_WINDOW(dialog), 
 		       new_title);
 }
+#endif /* HILDON_DISABLE_DEPRECATED */
 
 /**
  * hildon_get_password_dialog_set_caption:
